# ohes_kernel

./: .gdbinit  .gitignore  Cargo.toml  Makefile  bochsrc.txt  create-initrd.sh  do_time.fish  doc.txt  link.ld  logz copy.txt  package-lock.json  package.json  pci.txt  sym-city.ts  timer.ts  timings.txt  x86_64-unknown-none.json
.cargo/: config.toml
.obsidian/: config  workspace
asm/: boot.s
cfg/: disklayout.sfdsk  grub.cfg
faster_rlibc/: Cargo.toml
faster_rlibc/.cargo/: config.toml
faster_rlibc/src/: lib.rs
internal-design-shit/: syscalls.md
kmacros/: Cargo.toml
kmacros/src/: lib.rs
rootfs/etc/: init.rc
safety-here/: Cargo.toml  build.rs
safety-here/src/: lib.rs  main.s  swap.c  x64_mach.s
shm/: Cargo.toml
shm/src/: lib.rs
src/: constants.rs  csi.rs  exiting.rs  interrupts.rs  ksymmap.rs  lib.rs  main.rs  memory.rs  pci.rs  prelude.rs  queue.rs  shittymutex.rs  stack_canaries.rs  testing.rs  unwind.rs  userland.rs
src/devices/: mice.rs  mice_ps2.rs  mod.rs
src/drive/: cpio.rs  ext2.rs  fat.rs  gpt.rs  mod.rs
src/events/: mod.rs
src/init/: mod.rs
src/io/: device.rs  mod.rs
src/io/device/: debugcon.rs  kbdint_input.rs  multiboot_text.rs  multiboot_vga.rs  serial.rs  virt.rs
src/ksvc/: mod.rs
src/memory/: allocator.rs
src/preempt/: mod.rs
src/shell/: mod.rs
src/task/: keyboard.rs  mod.rs  simple_executor.rs
user/: test.s  user.ld
