[package]
authors = ["pitust <stelmaszek.piotrpilot@gmail.com>"]
autobins = false
edition = "2018"
name = "an_os"
version = "0.1.0"

[dependencies]
acpi = "2.1.0"
bitflags = "1.2.1"
fontdue = "0.4.0"
linked_list_allocator = "0.8.0"
# multiboot2 = "0.9.0"
pc-keyboard = "0.5.0"
pic8259_simple = "0.2.0"
serde_derive = "1.0.117"
spin = "0.5.2"
x86 = "0.34.0"
x86_64 = "0.12.0"
xmas-elf = "0.7.0"
multiboot = "0.6.0"
  
[dependencies.conquer-once]
default-features = false
version = "0.2.0"

[dependencies.cpp_demangle]
default-features = false
features = ["alloc"]
version = "0.3.1"

[dependencies.crossbeam-queue]
default-features = false
features = ["alloc"]
version = "0.2.1"

[dependencies.fallible-iterator]
default-features = false
features = ["alloc"]
version = "0.2.0"

[dependencies.faster_rlibc]
path = "faster_rlibc"

[dependencies.font8x8]
default-features = false
features = ["unicode"]
version = "0.2"

[dependencies.gimli]
default-features = false
features = ["read"]
version = "0.23.0"

[dependencies.hex]
default-features = false
version = "0.4"

[dependencies.kmacros]
path = "kmacros"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"

[dependencies.libc]
default-features = false
version = "0.2.45"

[dependencies.log]
default-features = false
version = "0.4.11"

[dependencies.postcard]
features = ["alloc"]
version = "0.5.1"

[dependencies.ralloc]
default-features = false
features = ["unsafe_no_mutex_lock"]
git = "https://github.com/pitust/ralloc"

[dependencies.safety-here]
path = "safety-here"

[dependencies.serde]
default-features = false
features = ["alloc"]
version = "1.0.117"

[dependencies.serde_json]
default-features = false
features = ["alloc"]
version = "1.0.59"

[features]
conio = []
debug_logs = []
default = []
displayio = []
fini_exit = []
fini_wait = []
address_cleaner = []

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[patch."https://github.com/pitust/ralloc".ralloc_shim]
path = "shm"
