[package]
name = "kmacros"
version = "0.1.0"
authors = ["pitust <stelmaszek.piotrpilot@gmail.com>"]
edition = "2018"
type = 'proc-macro'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.39", features = ["full", "fold"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true